tests/backend/checkmach/test_assume_fail.output
File "test_assume_fail.ml", line 8, characters 5-15:
Error: Annotation check for zero_alloc failed on function Test_assume_fail.test49 (camlTest_assume_fail__test49_HIDE_STAMP)
File "test_assume_fail.ml", line 9, characters 74-81:
  allocate 24 bytes
File "test_assume_fail.ml", line 9, characters 71-82:
  allocate 24 bytes
File "test_assume_fail.ml", line 9, characters 74-82:
  allocate 24 bytes
File "test_assume_fail.ml", line 4, characters 5-15:
Error: Annotation check for zero_alloc strict failed on function Test_assume_fail.test48 (camlTest_assume_fail__test48_HIDE_STAMP)
File "test_assume_fail.ml", line 5, characters 2-55:
  direct call camlCamlinternalFormat__make_printf_120_401_code (test_assume_fail.ml:5,2--55;test_assume_fail.ml:2,54--77;printf.ml:47,18--43;printf.ml:45,2--31) on a path to exceptional return
